# RapidRAW

./: AGENTS.md  CLI_QUICKSTART.md  CLI_USAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  Scratch.md  package-lock.json  pnpm-lock.yaml
data/: io.github.CyberTimon.RapidRAW.metainfo.xml
src/: App.tsx
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/: ai_processing.rs  cli.rs  cubecl_processing.rs  denoising.rs  exif_processing.rs  file_management.rs  gpu_processing.rs  image_loader.rs  image_processing.rs  lens_correction.rs  main.rs  mask_generation.rs  negative_conversion.rs  panorama_stitching.rs  raw_processing.rs  tagging.rs
src-tauri/src/shaders/: blur.wgsl  flare.wgsl  shader.wgsl
src/components/adjustments/: Basic.tsx  Color.tsx  Curves.tsx  Effects.tsx
src/components/modals/: CollageModal.tsx  CopyPasteSettingsModal.tsx  HdrModal.tsx  LensCorrectionModal.tsx  NegativeConversionModal.tsx  TransformModal.tsx
src/components/panel/: BottomBar.tsx  Editor.tsx  Filmstrip.tsx  FolderTree.tsx  MainLibrary.tsx  SettingsPanel.tsx
src/components/panel/editor/: EditorToolbar.tsx  FullScreenViewer.tsx  ImageCanvas.tsx
src/components/panel/editor/overlays/: CompositionOverlays.tsx
src/components/panel/right/: AIPanel.tsx  ControlsPanel.tsx  CropPanel.tsx  ExportPanel.tsx  LibraryExportPanel.tsx  MasksPanel.tsx  MetadataPanel.tsx  PresetsPanel.tsx  RightPanelSwitcher.tsx
src/components/ui/: AppProperties.tsx  CollapsibleSection.tsx  ColorWheel.tsx  ExportImportProperties.tsx  ExportPresetsList.tsx  GlobalTooltip.tsx  ImagePicker.tsx  LUTControl.tsx  Slider.tsx  Switch.tsx
src/context/: TaggingSubMenu.tsx
src/hooks/: useExportSettings.ts
src/utils/: adjustments.tsx
